Added svn client updated

--- a/svn-client/Dockerfile
+++ b/svn-client/Dockerfile
@@ -1,3 +1,5 @@
+# Docker svn client image
+
 FROM ubuntu:14.10
 MAINTAINER Aneesv <vaneesv@gmail.com>
 RUN apt-get update && apt-get install -y subversion
