--- a/android-nodejs/Dockerfile
+++ b/android-nodejs/Dockerfile
@@ -6,6 +6,7 @@ MAINTAINER Aneesv <vaneesv@gmail.com>
 RUN echo y | android update sdk --no-ui --all --filter addon-google_apis-google-23 && \
     echo y | android update sdk --no-ui --all --filter addon-google_apis-google-22 && \
     echo y | android update sdk --no-ui --all --filter addon-google_apis-google-21 && \
+    echo y | android update sdk --no-ui --all --filter build-tools-25.0.0 && \
     echo y | android update sdk --no-ui --all --filter build-tools-23.0.2 && \
     echo y | android update sdk --no-ui --all --filter build-tools-23.0.1 && \
     echo y | android update sdk --no-ui --all --filter extra-android-m2repository && \
