--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -16,7 +16,7 @@ RUN  apt-get update \
     # Curl
     &&  apt-get install -y libcurl3-dev && docker-php-ext-install curl \
     # GD
-    &&  apt-get install -y libpng12-dev libjpeg62-turbo-dev libfreetype6-dev && docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --with-png-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && docker-php-ext-install gd \
+    &&  apt-get install -y libpng12-dev libjpeg62-turbo-dev libfreetype6-dev && docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --with-png-dir=/usr/include/ --with-jpeg-dir=/usr/include/ 	&& docker-php-ext-install gd \
     # Postgresql
     &&  apt-get install -y libpq-dev && docker-php-ext-install pgsql \
     # Mcrypt
@@ -28,9 +28,8 @@ RUN  apt-get update \
     # JSON
     &&  docker-php-ext-install json \
     # ZIP
-    &&  apt-get install -y zlib1g-dev && docker-php-ext-configure zip --with-zlib-dir=/usr && docker-php-ext-install zip \
+    &&  apt-get install -y zlib1g-dev libicu-dev g++ && docker-php-ext-configure zip --with-zlib-dir=/usr && docker-php-ext-install zip \
     # PDO PDO Mysql
-    &&  docker-php-ext-install pdo pdo_mysql gettext mbstring intl \
+    &&  docker-php-ext-install pdo pdo_mysql gettext intl \
     # Remove apt lists to reduce image size
     &&  rm -rf /var/lib/apt/lists/*
-	
