--- a/android-nodejs/Dockerfile
+++ b/android-nodejs/Dockerfile
@@ -4,6 +4,7 @@ FROM beevelop/android-nodejs
 MAINTAINER Aneesv <vaneesv@gmail.com>
 
 RUN echo y | android update sdk --no-ui --all --filter addon-google_apis-google-23 && \
+    echo y | android update sdk --no-ui --all --filter addon-google_apis-google-24 && \
     echo y | android update sdk --no-ui --all --filter addon-google_apis-google-22 && \
     echo y | android update sdk --no-ui --all --filter addon-google_apis-google-21 && \
     echo y | android update sdk --no-ui --all --filter build-tools-25.0.0 && \
