--- a/svn-client/Dockerfile
+++ b/svn-client/Dockerfile
@@ -2,4 +2,4 @@
 
 FROM ubuntu:16.04
 MAINTAINER Aneesv <vaneesv@gmail.com>
-RUN apt-get update && apt-get install -y subversion git
+RUN apt-get update && apt-get install -y subversion git curl
